# ChangeLog for sys-auth/polkit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/polkit/ChangeLog,v 1.60 2011/12/08 15:41:16 ssuominen Exp $

  08 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> polkit-0.102.ebuild:
  ppc/ppc64 stable wrt #387163

  08 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> polkit-0.103.ebuild:
  Raise dev-libs/glib depend to at least 2.30 wrt #393579 by Matt Palermo

*polkit-0.103 (07 Dec 2011)

  07 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +polkit-0.103.ebuild:
  Version bump. Remove unrequired keepdir of /var/run/polkit-1 wrt #387903 by
  "i.Dark_Templar"

  05 Nov 2011; Raúl Porcel <armin76@gentoo.org> polkit-0.102.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #387163

  29 Oct 2011; Markus Meier <maekke@gentoo.org> polkit-0.102.ebuild:
  arm stable, bug #387163

  19 Oct 2011; Jeroen Roovers <jer@gentoo.org> polkit-0.102.ebuild:
  Stable for HPPA (bug #387163).

  18 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> polkit-0.102.ebuild:
  x86 stable wrt bug #387163

  15 Oct 2011; Markos Chandras <hwoarang@gentoo.org> polkit-0.102.ebuild:
  Stable on amd64 wrt bug #387163

  28 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> polkit-0.101-r1.ebuild,
  polkit-0.102.ebuild:
  pambase[consolekit] support is needed to use polkit with pam, add to PDEPEND

*polkit-0.102 (06 Aug 2011)

  06 Aug 2011; Samuli Suominen <ssuominen@gentoo.org> +polkit-0.102.ebuild:
  Version bump.

  10 Jul 2011; Matt Turner <mattst88@gentoo.org> polkit-0.101-r1.ebuild:
  Added ~mips, bug 296548

  14 May 2011; Gilles Dartiguelongue <eva@gentoo.org> polkit-0.101-r1.ebuild:
  Add missing dtd to DEPEND, bug #355505.

  30 Apr 2011; Raúl Porcel <armin76@gentoo.org> polkit-0.101-r1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #364973

  28 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  polkit-0.101-r1.ebuild:
  x86 stable wrt security bug #364973
